unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__Account__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Completed Dial Items</relationshipLabel>
    <relationshipName>CompletedDialItems</relationshipName>
    <type>Lookup</type>
</CustomField>