unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__Attempts__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>