unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__Available__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Available__c</fullName>
    <formula>IF( OR( AND( ISPICKVAL(nbavs__State__c, &#39;Pending&#39;)), AND(ISPICKVAL(nbavs__State__c, &#39;Retry&#39;), nbavs__Attempts__c &lt;  nbavs__DialList__r.nbavs__MaximumDialAttempts__c, nbavs__InTimeout__c = false ), AND(ISPICKVAL(nbavs__State__c, &#39;Preview&#39;),  nbavs__User__r.nbavs__User__c = $User.Id ), AND(ISPICKVAL(nbavs__State__c, &#39;Selected&#39;),  nbavs__User__r.nbavs__User__c = $User.Id )) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>