unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__CallDuration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallDuration__c</fullName>
    <formula>(nbavs__CallEnd__c - nbavs__CallStart__c)*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>