unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__CallStart__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallStart__c</fullName>
    <label>Call Start</label>
    <type>DateTime</type>
</CustomField>