unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__Contact__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Completed Dial Items</relationshipLabel>
    <relationshipName>CompletedDialItems</relationshipName>
    <type>Lookup</type>
</CustomField>