unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__InTimeout__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InTimeout__c</fullName>
    <formula>((NOW() -  LastModifiedDate) * 1440) &lt;  nbavs__DialList__r.nbavs__Timeout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InTimeout</label>
    <type>Checkbox</type>
</CustomField>