unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__Task__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Task__c</fullName>
    <formula>IF(ISBLANK(nbavs__TaskId__c), &#39;&#39;, HYPERLINK(&#39;/&#39; +  nbavs__TaskId__c, &#39;Call Disposition&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>