unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__TaskId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TaskId__c</fullName>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>