unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Completed Dial Items</relationshipLabel>
    <relationshipName>CompletedDialItems</relationshipName>
    <type>Lookup</type>
</CustomField>