unpackaged/main/default/objects/nbavs__DialItemCompleted__c/fields/nbavs__UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UUID__c</fullName>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>